--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "css-loader": "^6.9.0",
+    "jwt-decode": "^4.0.0",
     "postcss-loader": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
