--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.69.7",
     "sass-loader": "^14.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
