--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^5.3.2",
     "css-loader": "^6.9.0",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "postcss-loader": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -19,14 +21,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.69.7",
     "sass-loader": "^14.0.0",
-    "web-vitals": "^2.1.4",
-    "leaflet": "^1.9.4",
-    "leaflet.markercluster": "^1.5.3"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
